# 4-qsqnk

./: CMakeLists.txt  bmp_handler.c  converter.c
src/: bmp_handler.h  comparer.c  converter.c
